# void_universe_core

./: CMakeLists.txt  README.md
.docs/cmakelists/: CMakeLists.txt
.docs/cmakelists/freertos/: 1.CMakeLists.txt  2.CMakeLists.txt  CMakeLists.txt
.docs/cmakelists/freertos/include/: 1.CMakeLists.txt  CMakeLists.txt
.docs/cmakelists/freertos/portable/: CMakeLists.txt
.docs/cmakelists/lwip/: CMakeLists.txt
.docs/cmakelists/src/: CMakeLists.txt  src.CMakeLists.txt  tet.txt
.docs/freertos/configs/: FreeRTOSConfig.h  FreeRTOSConfig_2.h
lib/: CMakeLists.txt
lib/divcheck/: CMakeLists.txt  divcheck.c
lib/lcd1602/: CMakeLists.txt  lcd_1602_i2c.c  lcd_1602_i2c.h
lib/led/: CMakeLists.txt  Led.cpp  Led.hpp  led_task_wrapper.c
lib/ssd1306/: CMakeLists.txt  raaspberry26x32.h  ssd1306_i2c.c  ssd1306_i2c.h
src/: CMakeLists.txt  void_universe_core.c
